nouveau kernel module conflicts with nvidia blobs

--- a/projects/Generic-X11/linux/linux.x86_64.conf
+++ b/projects/Generic-X11/linux/linux.x86_64.conf
@@ -3426,11 +3426,7 @@ CONFIG_DVB_AF9033=m
 #
 # Graphics support
 #
-CONFIG_AGP=y
-# CONFIG_AGP_AMD64 is not set
-CONFIG_AGP_INTEL=y
-# CONFIG_AGP_SIS is not set
-CONFIG_AGP_VIA=y
+# CONFIG_AGP is not set
 CONFIG_INTEL_GTT=y
 CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
@@ -3445,7 +3441,6 @@ CONFIG_DRM_KMS_FB_HELPER=y
 CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_TTM=y
-CONFIG_DRM_VM=y
 
 #
 # I2C encoder or helper chips
@@ -3465,10 +3460,7 @@ CONFIG_DRM_AMDGPU_CIK=y
 # ACP (Audio CoProcessor) Configuration
 #
 CONFIG_DRM_AMD_ACP=y
-CONFIG_DRM_NOUVEAU=y
-CONFIG_NOUVEAU_DEBUG=5
-CONFIG_NOUVEAU_DEBUG_DEFAULT=3
-CONFIG_DRM_NOUVEAU_BACKLIGHT=y
+# CONFIG_DRM_NOUVEAU is not set
 CONFIG_DRM_I915=y
 # CONFIG_DRM_I915_ALPHA_SUPPORT is not set
 CONFIG_DRM_I915_CAPTURE_ERROR=y
@@ -3531,7 +3523,7 @@ CONFIG_FB_SYS_FOPS=y
 CONFIG_FB_DEFERRED_IO=y
 # CONFIG_FB_SVGALIB is not set
 # CONFIG_FB_MACMODES is not set
-CONFIG_FB_BACKLIGHT=y
+# CONFIG_FB_BACKLIGHT is not set
 CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TILEBLITTING is not set
 
