--- a/projects/Generic-X11/linux/linux.i386.conf
+++ b/projects/Generic-X11/linux/linux.i386.conf
@@ -3093,17 +3093,13 @@ CONFIG_DVB_AF9033=m
 #
 # Graphics support
 #
-CONFIG_AGP=y
 # CONFIG_AGP_ALI is not set
 # CONFIG_AGP_ATI is not set
 # CONFIG_AGP_AMD is not set
-# CONFIG_AGP_AMD64 is not set
-CONFIG_AGP_INTEL=y
 # CONFIG_AGP_NVIDIA is not set
-# CONFIG_AGP_SIS is not set
 # CONFIG_AGP_SWORKS is not set
-CONFIG_AGP_VIA=y
 # CONFIG_AGP_EFFICEON is not set
+# CONFIG_AGP is not set
 CONFIG_INTEL_GTT=y
 CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
@@ -3118,7 +3114,6 @@ CONFIG_DRM_KMS_FB_HELPER=y
 CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_TTM=y
-CONFIG_DRM_VM=y
 
 #
 # I2C encoder or helper chips
@@ -3138,10 +3133,7 @@ CONFIG_DRM_AMDGPU=y
 # ACP (Audio CoProcessor) Configuration
 #
 # CONFIG_DRM_AMD_ACP is not set
-CONFIG_DRM_NOUVEAU=y
-CONFIG_NOUVEAU_DEBUG=5
-CONFIG_NOUVEAU_DEBUG_DEFAULT=3
-CONFIG_DRM_NOUVEAU_BACKLIGHT=y
+# CONFIG_DRM_NOUVEAU is not set
 CONFIG_DRM_I915=y
 # CONFIG_DRM_I915_ALPHA_SUPPORT is not set
 CONFIG_DRM_I915_CAPTURE_ERROR=y
@@ -3203,7 +3195,7 @@ CONFIG_FB_SYS_FOPS=y
 CONFIG_FB_DEFERRED_IO=y
 # CONFIG_FB_SVGALIB is not set
 # CONFIG_FB_MACMODES is not set
-CONFIG_FB_BACKLIGHT=y
+# CONFIG_FB_BACKLIGHT is not set
 CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TILEBLITTING is not set
 
