Allow some services to be conditionally skipped with fastboot=1 kernel parameter. ~5 seconds less spent in usermode boot

--- a/packages/network/avahi/system.d/avahi-defaults.service
+++ b/packages/network/avahi/system.d/avahi-defaults.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Avahi defaults
+ConditionKernelCommandLine=!fastboot=1
 After=local-fs.target
 
 ConditionPathExists=!/storage/.cache/services/avahi.conf
