--- a/packages/network/avahi/system.d/avahi-daemon.service
+++ b/packages/network/avahi/system.d/avahi-daemon.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Avahi Daemon
+ConditionKernelCommandLine=!fastboot=1
 After=network.target avahi-defaults.service
 Requires=avahi-defaults.service
 ConditionPathExists=/storage/.cache/services/avahi.conf
