--- a/packages/sysutils/busybox/system.d.opt/cron-defaults.service
+++ b/packages/sysutils/busybox/system.d.opt/cron-defaults.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Cron defaults
+ConditionKernelCommandLine=!fastboot=1
 After=local-fs.target
 
 ConditionPathExists=!/storage/.cache/services/crond.conf
